Change splash h1 to h3 to solve any responsive issues with devices. Add media tag for max-width 500 to change dashboard h1 to smaller font size. this should cover most mobile devices so that h1 do not get wrapped. Fix the twitter bootsrtap collapse show to have same background as navbar plus absolute position from top usign the navbar-height variable.

--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,3 +1,5 @@
+@import "../../assets/scss/global";
+
 .section {
   .img {
     left: 0;
@@ -46,3 +48,12 @@
     }   
   } 
 }   
+
+@media (max-width: 500px) {
+  .section {
+    h1 {
+      font-weight: 200;
+      font-size: set-font-size(2.4);
+    }
+  }
+}
