--- a/src/assets/scss/_navbar.scss
+++ b/src/assets/scss/_navbar.scss
@@ -1,26 +1,41 @@
 .navbar {
   background-color: rgba(0, 0, 0, 0.5);
   height: $navbar-height;
+  padding-top: $navbar-padding-top;
+  padding-bottom: $navbar-padding-bottom;
 
+
+  .navbar-brand {
+    padding: 0px;
+  }
   ul.navbar-nav {
     a.nav-link {
       color: #FFFFFF;
       padding: 0 20px;
+    }
+
+    a.nav-link.disabled {
+      opacity: 0.5;
+    }
+  } 
+
+  button.navbar-toggler .navbar-toggler-icon {
+    cursor: pointer;
+
+    .fa.fa-bars {
+      color: #ACACAC;
+      width: 20px;
+      margin: 0 auto;
+    }
   }
 
-  a.nav-link.disabled {
-    opacity: 0.5;
+  .collapse.show {
+    position: absolute;
+    left: 0px;
+    top: $navbar-height;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    background-color: rgba(0, 0, 0, 0.5);
   }
-} 
-
-button.navbar-toggler .navbar-toggler-icon {
-  cursor: pointer;
-
-  .fa.fa-bars {
-    color: #ACACAC;
-    width: 20px;
-    margin: 0 auto;
 }
-}
-}
-
