--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -24,6 +24,8 @@ $steel: #474D5D;
 
 // navbar
 $navbar-height: 60px;
+$navbar-padding-top: 10px;
+$navbar-padding-bottom: 10px;
 
 // sections
 $section-bg: #FFFFFF !default;
